added home button to html files

--- a/public/add_card.html
+++ b/public/add_card.html
@@ -7,6 +7,7 @@
     <title>Add Card</title>
 </head>
 <body>
+    <div class="home-button"><a href="index.html">Home</a></div>
     <h1>Add Card</h1>
     <form action="" method="POST">
         <!-- Card details form fields -->
