--- a/public/add_pokemon.html
+++ b/public/add_pokemon.html
@@ -6,6 +6,7 @@
     <title>Add Pokémon</title>
 </head>
 <body>
+    <div class="home-button"><a href="index.html">Home</a></div>
     <h1>Add Pokémon</h1>
     <form id="addPokemonForm" action="/pokemon" method="post">
         <label for="pokedex_number">Pokédex Number:</label>
