--- a/public/edit_deck.html
+++ b/public/edit_deck.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+    <div class="home-button"><a href="index.html">Home</a></div>
     <h1>Edit Deck</h1>
     <form action="" method="POST">
         <!-- Deck details form fields -->
