--- a/public/edit_set.html
+++ b/public/edit_set.html
@@ -6,6 +6,7 @@
     <title>Edit Set</title>
 </head>
 <body>
+    <div class="home-button"><a href="index.html">Home</a></div>
     <h1>Edit Set</h1>
     <form id="editSetForm" action="/sets/[SET_NAME]" method="post">
         <!-- SET_NAME should be dynamically replaced with the actual name of the set being edited -->
