--- a/public/view_players.html
+++ b/public/view_players.html
@@ -7,6 +7,7 @@
     <title>View Players</title>
 </head>
 <body>
+    <div class="home-button"><a href="index.html">Home</a></div>
     <h1>View Players</h1>
     <table>
         <thead>
