--- a/public/view_sets.html
+++ b/public/view_sets.html
@@ -7,7 +7,10 @@
     <title>View Sets</title>
 </head>
 <body>
+    <div class="home-button"><a href="index.html">Home</a></div>
+
     <h1>View Sets</h1>
+    
     <table>
         <thead>
             <tr>
