--- a/public/add_deck.html
+++ b/public/add_deck.html
@@ -7,6 +7,7 @@
     <title>Add Deck</title>
 </head>
 <body>
+    <div class="home-button"><a href="index.html">Home</a></div>
     <h1>Add Deck</h1>
     <form action="" method="POST">
         <!-- Deck details form fields -->
