--- a/public/add_player.html
+++ b/public/add_player.html
@@ -7,6 +7,7 @@
     <title>Add Player</title>
 </head>
 <body>
+    <div class="home-button"><a href="index.html">Home</a></div>
     <h1>Add Player</h1>
     <form action="" method="POST">
         <!-- Player details form fields -->
