--- a/public/add_set.html
+++ b/public/add_set.html
@@ -6,6 +6,7 @@
     <title>Add Set</title>
 </head>
 <body>
+    <div class="home-button"><a href="index.html">Home</a></div>
     <h1>Add Set</h1>
     <form id="addSetForm" action="/api/sets" method="post">
         <label for="set_name">Set Name:</label>
