--- a/public/edit_card.html
+++ b/public/edit_card.html
@@ -7,6 +7,7 @@
     <title>Edit Card</title>
 </head>
 <body>
+    <div class="home-button"><a href="index.html">Home</a></div>
     <h1>Edit Card</h1>
     <form action="" method="POST">
         <!-- Card details form fields -->
