--- a/public/edit_pokemon.html
+++ b/public/edit_pokemon.html
@@ -6,6 +6,7 @@
     <title>Edit Pokémon</title>
 </head>
 <body>
+    <div class="home-button"><a href="index.html">Home</a></div>
     <h1>Edit Pokémon</h1>
     <form id="editPokemonForm" action="/pokemon/[POKEMON_ID]" method="post">
         <!-- POKEMON_ID should be dynamically replaced with the actual ID of the Pokémon being edited -->
