--- a/public/view_cards.html
+++ b/public/view_cards.html
@@ -7,6 +7,7 @@
     <title>View Cards</title>
 </head>
 <body>
+    <div class="home-button"><a href="index.html">Home</a></div>
     <h1>View Cards</h1>
     <table>
         <thead>
