--- a/public/add_player.html
+++ b/public/add_player.html
@@ -9,7 +9,7 @@
 <body>
     <div class="home-button"><a href="index.html">Home</a></div>
     <h1>Add Player</h1>
-    <form action="" method="POST">
+    <form id="addPokemonForm" action="http://flip1.engr.oregonstate.edu:9000/pokemon" method="post">
         <!-- Player details form fields -->
         <label for="name">Name:</label>
         <input type="text" id="name" name="name" required><br>
