--- a/public/add_set.html
+++ b/public/add_set.html
@@ -8,7 +8,7 @@
 <body>
     <div class="home-button"><a href="index.html">Home</a></div>
     <h1>Add Set</h1>
-    <form id="addSetForm" action="/api/sets" method="post">
+    <form id="addSetForm" action="http://flip1.engr.oregonstate.edu:9000/sets" method="post">
         <label for="set_name">Set Name:</label>
         <input type="text" id="set_name" name="set_name" required><br>
 
