--- a/public/edit_player.html
+++ b/public/edit_player.html
@@ -11,7 +11,7 @@
 <body>
     <div class="home-button"><a href="index.html">Home</a></div>
     <h1>Edit Player</h1>
-    <form action="" method="POST">
+    <form id="editCardForm" method="PUT" action="/cards/:card_id">
         <!-- Player details form fields -->
         <label for="name">Name:</label>
         <input type="text" id="name" name="name" required><br>
