--- a/public/edit_card.html
+++ b/public/edit_card.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <title>Edit Card</title>
 </head>
+
 <body>
     <div class="home-button"><a href="index.html">Home</a></div>
     <h1>Edit Card</h1>
-    <form action="" method="POST">
+    <form id="editCardForm" method="PUT">
         <!-- Card details form fields -->
         <label for="card_name">Card Name:</label>
         <input type="text" id="card_name" name="card_name" required><br>
@@ -31,5 +33,7 @@
 
         <button type="submit">Save Changes</button>
     </form>
+
 </body>
+
 </html>
