--- a/public/view_cards.html
+++ b/public/view_cards.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" href="styles.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>View Cards</title>
 </head>
 <body>
@@ -21,58 +21,60 @@
                 <th>Action</th>
             </tr>
         </thead>
-        <tbody>
-            <tr>
-                <td>Pikachu</td>
-                <td>Base Set</td>
-                <td>025</td>
-                <td>Electric</td>
-                <td>/images/pikachu.jpg</td>
-                <td>Common</td>
-                <td>
-                    <a href="edit_card.html">Edit</a> |
-                    <a href="">Delete</a>
-                </td>
-            </tr>
-            <tr>
-                <td>Charizard</td>
-                <td>Base Set</td>
-                <td>006</td>
-                <td>Fire/Flying</td>
-                <td>/images/charizard.jpg</td>
-                <td>Rare Holo</td>
-                <td>
-                    <a href="edit_card.html">Edit</a> |
-                    <a href="">Delete</a>
-                </td>
-            </tr>
-            <tr>
-                <td>Bulbasaur</td>
-                <td>Base Set</td>
-                <td>001</td>
-                <td>Grass/Poison</td>
-                <td>/images/bulbasaur.jpg</td>
-                <td>Common</td>
-                <td>
-                    <a href="edit_card.html">Edit</a> |
-                    <a href="">Delete</a>
-                </td>
-            </tr>
-            <tr>
-                <td>Squirtle</td>
-                <td>Base Set</td>
-                <td>007</td>
-                <td>Water</td>
-                <td>/images/squirtle.jpg</td>
-                <td>Common</td>
-                <td>
-                    <a href="edit_card.html">Edit</a> |
-                    <a href="">Delete</a>
-                </td>
-            </tr>
+        <tbody id="cardsTableBody">
+
         </tbody>
     </table>
     <div class="button-container">
         <button><a href="add_card.html">Add Card</a></button>
-    </div></body>
+    </div>
+
+    <script>
+        document.addEventListener('DOMContentLoaded', function() {
+            fetch('http://flip1.engr.oregonstate.edu:9000/cards')
+                .then(response => response.json())
+                .then(cards => {
+                    const tableBody = document.getElementById('cardsTableBody');
+                    cards.forEach(card => {
+                        const row = document.createElement('tr');
+                        row.id = `cardRow_${card.card_id}`; // Add a unique ID to each row
+                        row.innerHTML = `
+                            <td>${card.card_name}</td>
+                            <td>${card.set_name}</td>
+                            <td>${card.pokedex_number}</td>
+                            <td>${card.type}</td>
+                            <td>${card.image_path}</td>
+                            <td>${card.rarity}</td>
+                            <td>
+                                <a href="edit_card.html?card_id=${card.card_id}">Edit</a> |
+                                <a href="#" onclick="deleteCard(${card.card_id})">Delete</a>
+                            </td>
+                        `;
+                        tableBody.appendChild(row);
+                    });
+                })
+                .catch(error => console.error('Error:', error));
+        });
+    
+        function deleteCard(cardId) {
+            if (confirm("Are you sure you want to delete this card?")) {
+                // Send an AJAX request to delete the card
+                fetch(`/cards/${cardId}`, {
+                    method: 'DELETE'
+                })
+                .then(response => {
+                    if (response.status === 200) {
+                        // Card deleted successfully, remove the row from the table
+                        const rowToDelete = document.getElementById(`cardRow_${cardId}`);
+                        rowToDelete.remove();
+                    } else {
+                        // Handle error here
+                        console.ƒerror('Error:', response.statusText);
+                    }
+                })
+                .catch(error => console.error('Error:', error));
+            }
+        }
+    </script>
+</body>
 </html>
