--- a/public/view_pokemon.html
+++ b/public/view_pokemon.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" href="styles.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>View Pokémon</title>
 </head>
 <body>
@@ -20,24 +20,59 @@
                 <th>Action</th>
             </tr>
         </thead>
-        <tbody>
-            <!-- Example Row (This should be dynamically generated using JavaScript) -->
-            <tr>
-                <td>001</td>
-                <td>Bulbasaur</td>
-                <td>Grass/Poison</td>
-                <td>Basic</td>
-                <td>A grass-type Pokémon with a plant bulb on its back.</td>
-                <td>
-                    <a href="edit_pokemon.html">Edit</a> |
-                    <a href="">Delete</a>
-                </td>
-            </tr>
-            <!-- More rows will be added here dynamically -->
+        <tbody id="pokemonTableBody">
+            <!-- Pokémon data will be dynamically generated here -->
         </tbody>
     </table>
     <div class="button-container">
         <button><a href="add_pokemon.html">Add Pokémon</a></button>
     </div>
+
+    <script>
+        document.addEventListener('DOMContentLoaded', function() {
+            fetch('http://flip1.engr.oregonstate.edu:9000/pokemon')
+                .then(response => response.json())
+                .then(pokemon => {
+                    const tableBody = document.getElementById('pokemonTableBody');
+                    pokemon.forEach(poke => {
+                        const row = document.createElement('tr');
+                        row.id = `pokemonRow_${poke.pokedex_number}`; // Add a unique ID to each row
+                        row.innerHTML = `
+                            <td>${poke.pokedex_number}</td>
+                            <td>${poke.pokemon_name}</td>
+                            <td>${poke.type}</td>
+                            <td>${poke.evolution_stage}</td>
+                            <td>${poke.description}</td>
+                            <td>
+                                <a href="edit_pokemon.html?pokedex_number=${poke.pokedex_number}">Edit</a> |
+                                <a href="#" onclick="deletePokemon(${poke.pokedex_number})">Delete</a>
+                            </td>
+                        `;
+                        tableBody.appendChild(row);
+                    });
+                })
+                .catch(error => console.error('Error:', error));
+        });
+    
+        function deletePokemon(pokedexNumber) {
+            if (confirm("Are you sure you want to delete this Pokémon?")) {
+                // Send an AJAX request to delete the Pokémon
+                fetch(`/pokemon/${pokedexNumber}`, {
+                    method: 'DELETE'
+                })
+                .then(response => {
+                    if (response.status === 200) {
+                        // Pokémon deleted successfully, remove the row from the table
+                        const rowToDelete = document.getElementById(`pokemonRow_${pokedexNumber}`);
+                        rowToDelete.remove();
+                    } else {
+                        // Handle error here
+                        console.error('Error:', response.statusText);
+                    }
+                })
+                .catch(error => console.error('Error:', error));
+            }
+        }
+    </script>
 </body>
 </html>
